Responsive a-propos - ajuster code - responsive contact

--- a/src/a-propos.html
+++ b/src/a-propos.html
@@ -8,6 +8,7 @@
 
     <link href="css/main.css" rel="stylesheet">
 
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
@@ -18,6 +19,7 @@
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
 
+    <!--aos-->
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet"/>
 
     <!-- Script -->
@@ -35,7 +37,7 @@
         <!-- nav-hamburger -->
         <div class="sidenav" id="mySidenav">
             <a class="closeMenu" href="javascript:void(0)">-</a>
-            <a href="index.html">&#8226; Acceuil</a>
+            <a href="index.html">&#8226; Accueil</a>
             <a href="singles.html">&#8226; Projets</a>
             <a href="a-propos.html">&#8226; À propos</a>
             <a href="contact.html">&#8226; Contact</a>
@@ -97,8 +99,8 @@
 
     <h1 class="titre-page">Mes compétences</h1>
     <div class="comp-grid">
-        <div data-aos="zoom-in-right"
-             data-aos-offset="400" class="comp-1">
+        <div class="comp-1"
+             data-aos="zoom-in-right" data-aos-offset="400">
             <a href="">
                 <div class="img-comp-1"></div>
             </a>
@@ -107,8 +109,8 @@
                     class="texte-alt2-color">HTML/CSS</span> pour créer un
                 code de qualité.</p>
         </div>
-        <div data-aos="zoom-in-right"
-             data-aos-offset="400"  class="comp-2">
+        <div class="comp-2"
+             data-aos="zoom-in-right" data-aos-offset="400">
             <p>J’aime travailler avec <span class="texte-alt2-color">Figma</span> pour le <span
                     class="texte-alt2-color">prototypage</span> et <span class="texte-alt2-color">Photoshop</span> pour
                 optimiser les images que je
@@ -117,8 +119,8 @@
                 <div class="img-comp-2"></div>
             </a>
         </div>
-        <div data-aos="zoom-in-right"
-             data-aos-offset="400"  class="comp-3">
+        <div class="comp-3"
+             data-aos="zoom-in-right" data-aos-offset="400">
             <a href="">
                 <div class="img-comp-3"></div>
             </a>
@@ -127,8 +129,8 @@
                 d’<span class="texte-alt2-color">ACF</span> et de
                 <span class="texte-alt2-color">CPT</span></p>
         </div>
-        <div data-aos="zoom-in-right"
-             data-aos-offset="400"  class="comp-4">
+        <div class="comp-4"
+             data-aos="zoom-in-right" data-aos-offset="400">
             <p>Pour créer des <span class="texte-alt2-color">expériences</span> interactives intéressantes, je me sers
                 de <span
                         class="texte-alt2-color">Unity</span>, <span class="texte-alt2-color">Blender</span> et <span
@@ -143,8 +145,8 @@
 <section class="interets">
     <h1 class="titre-page">Mes Intérêts</h1>
     <div class="interet-grid">
-        <div  data-aos="fade-up"
-              data-aos-duration="3000"  class="texte-interet">
+        <div class="texte-interet"
+             data-aos="fade-up" data-aos-duration="3000">
             <p>Je suis professionnellement et personnellement <span class="texte-alt2-color">multidisciplinaire</span>,
                 je fais de l’escalade, je suis
                 cinéphile,
@@ -162,8 +164,8 @@
                         class="texte-alt2-color">productifs</span> et
                 <span class="texte-alt2-color">créatifs</span>.</p>
         </div>
-        <div data-aos="fade-up"
-             data-aos-duration="4000" class="imgs-interets">
+        <div class="imgs-interets"
+             data-aos="fade-up" data-aos-duration="4000">
             <div class="img-interets-1"></div>
             <div class="img-interets-2"></div>
             <div class="img-interets-3"></div>
