--- a/src/course-lumiere.html
+++ b/src/course-lumiere.html
@@ -37,7 +37,7 @@
         <!-- nav-hamburger -->
         <div class="sidenav" id="mySidenav">
             <a class="closeMenu" href="javascript:void(0)">-</a>
-            <a href="index.html">&#8226; Acceuil</a>
+            <a href="index.html">&#8226; Accueil</a>
             <a href="singles.html">&#8226; Projets</a>
             <a href="a-propos.html">&#8226; À propos</a>
             <a href="contact.html">&#8226; Contact</a>
@@ -53,7 +53,7 @@
 </header>
 
 <div class="intro-projet">
-    <div class="image-projet"><img src="images/mockup-projet-1.png" alt="projet-desktop-refonte-image"></div>
+    <div class="image-projet"><img alt="projet-desktop-refonte-image" src="images/mockup-projet-1.png"></div>
     <div class="texte-projet">
         <h1>Course Lumière</h1>
         <h2>Touch Designer <span class="texte-alt-color">|</span> Jeu</h2>
@@ -74,11 +74,11 @@
                 <div class="flex-logiciels">
                     <div class="titre-logo-projet">
                         <p>Touch Designer</p>
-                        <img src="images/touchDesigner-icon.png" alt="icon-touch-designer">
+                        <img alt="icon-touch-designer" src="images/touchDesigner-icon.png">
                     </div>
                     <div class="titre-logo-projet">
                         <p>Blender</p>
-                        <img src="images/blender-icon.png" alt="icon-blender">
+                        <img alt="icon-blender" src="images/blender-icon.png">
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 <div class="flex-competences">
                     <div class="titre-logo-projet">
                         <p>Python</p>
-                        <img src="images/python-icon.png" alt="">
+                        <img alt="" src="images/python-icon.png">
                     </div>
                 </div>
             </div>
@@ -95,32 +95,32 @@
     </div>
 </div>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="single-demo-video">
+<section class="single-demo-video"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Video Demo</h1>
-        <iframe src="https://www.youtube.com/embed/5W9M3tTiSGw?controls=0"></iframe>
+    <iframe src="https://www.youtube.com/embed/5W9M3tTiSGw?controls=0"></iframe>
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Programmation en <span class="texte-alt-color">noeud</span></h1>
-    <img src="images/course-programmation.jpg" alt="course-programmation">
+    <img alt="course-programmation" src="images/course-programmation.jpg">
 </section>
 
 <section class="projet-section-slider"
          data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Modélisation de la voiture</h1>
     <div class="flex-slider">
-    <div id="slider">
-        <figure>
-        <img src="images/course-voiture-sans-texture.jpg" alt="modele-voiture-sans-texture">
-        <img src="images/course-voiture-avec-texture.jpg" alt="modele-voiture-avec-texture">
-        <img src="images/course-voiture-rendu-cycle.jpg" alt="modele-voiture-rendu-final">
-        <img src="images/course-acceuil.jpg" alt="modele-voiture-rendu-final">
-        <img src="images/course-voiture-sans-texture.jpg" alt="modele-voiture-sans-texture">
-        </figure>
-    </div>
+        <div id="slider">
+            <figure>
+                <img alt="modele-voiture-sans-texture" src="images/course-voiture-sans-texture.jpg">
+                <img alt="modele-voiture-avec-texture" src="images/course-voiture-avec-texture.jpg">
+                <img alt="modele-voiture-rendu-final" src="images/course-voiture-rendu-cycle.jpg">
+                <img alt="modele-voiture-rendu-final" src="images/course-acceuil.jpg">
+                <img alt="modele-voiture-sans-texture" src="images/course-voiture-sans-texture.jpg">
+            </figure>
         </div>
+    </div>
 </section>
 
 
