--- a/src/refonte-site.html
+++ b/src/refonte-site.html
@@ -8,6 +8,7 @@
 
     <link href="css/main.css" rel="stylesheet">
 
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
@@ -18,6 +19,7 @@
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
 
+    <!--aos-->
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet"/>
 
     <!-- Script -->
@@ -35,7 +37,7 @@
         <!-- nav-hamburger -->
         <div class="sidenav" id="mySidenav">
             <a class="closeMenu" href="javascript:void(0)">-</a>
-            <a href="index.html">&#8226; Acceuil</a>
+            <a href="index.html">&#8226; Accueil</a>
             <a href="singles.html">&#8226; Projets</a>
             <a href="a-propos.html">&#8226; À propos</a>
             <a href="contact.html">&#8226; Contact</a>
@@ -51,7 +53,7 @@
 </header>
 
 <div class="intro-projet">
-    <div class="image-projet"><img src="images/mockup-projet-2.png" alt="projet-jeux-de-course"></div>
+    <div class="image-projet"><img alt="projet-jeux-de-course" src="images/mockup-projet-2.png"></div>
     <div class="texte-projet">
         <h1>Refonte d’un site</h1>
         <h2>WordPress <span class="texte-alt-color">|</span> HTML/CSS/JS</h2>
@@ -70,13 +72,13 @@
                 <h2>Logiciels</h2>
                 <div class="flex-logiciels">
                     <div class="titre-logo-projet">
-                        <img src="images/webstorm-icon.png" alt="icon-webstorm">
+                        <img alt="icon-webstorm" src="images/webstorm-icon.png">
                     </div>
                     <div class="titre-logo-projet">
-                        <img src="images/phpstorm-1.png" alt="icon-phpstorm">
+                        <img alt="icon-phpstorm" src="images/phpstorm-1.png">
                     </div>
                     <div class="titre-logo-projet">
-                        <img src="images/icone-wordpress.png" alt="icon-wordpress">
+                        <img alt="icon-wordpress" src="images/icone-wordpress.png">
                     </div>
                 </div>
             </div>
@@ -84,16 +86,16 @@
                 <h2>Compétences</h2>
                 <div class="flex-competences">
                     <div class="titre-logo-projet">
-                        <img src="images/html5.png" alt="icon-html-5">
+                        <img alt="icon-html-5" src="images/html5.png">
                     </div>
                     <div class="titre-logo-projet">
-                        <img src="images/css-icon-1.png" alt="icon-css">
+                        <img alt="icon-css" src="images/css-icon-1.png">
                     </div>
                     <div class="titre-logo-projet">
-                        <img src="images/javascript-logo.png" alt="icon-js">
+                        <img alt="icon-js" src="images/javascript-logo.png">
                     </div>
                     <div class="titre-logo-projet">
-                        <img src="images/php-icone.png" alt="icon-php">
+                        <img alt="icon-php" src="images/php-icone.png">
                     </div>
                 </div>
             </div>
@@ -101,34 +103,34 @@
     </div>
 </div>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="single-demo-video">
+<section class="single-demo-video"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Video Demo</h1>
     <iframe src="https://www.youtube.com/embed/kWp3R5SsEJE?controls=0"></iframe>
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Programmation <span class="texte-alt-color">Front-Page</span></h1>
-    <img src="images/programmation-front-page.jpg" alt="refonte-site-programmation">
+    <img alt="refonte-site-programmation" src="images/programmation-front-page.jpg">
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Programmation <span class="texte-alt-color">ACF</span></h1>
-    <img src="images/refonte-acf.jpg" alt="refonte-site-programmation">
+    <img alt="refonte-site-programmation" src="images/refonte-acf.jpg">
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Programmation <span class="texte-alt-color">CPT</span></h1>
-    <img src="images/refonte-cpt.jpg" alt="refonte-site-programmation">
+    <img alt="refonte-site-programmation" src="images/refonte-cpt.jpg">
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Utilisation de <span class="texte-alt-color">GitHub</span></h1>
-    <img src="images/refonte-github.jpg" alt="refonte-site-programmation">
+    <img alt="refonte-site-programmation" src="images/refonte-github.jpg">
 </section>
 
 
