--- a/src/site-ecommerce.html
+++ b/src/site-ecommerce.html
@@ -8,6 +8,7 @@
 
     <link href="css/main.css" rel="stylesheet">
 
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
@@ -18,6 +19,7 @@
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
 
+    <!--aos-->
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet"/>
 
     <!-- Script -->
@@ -35,7 +37,7 @@
         <!-- nav-hamburger -->
         <div class="sidenav" id="mySidenav">
             <a class="closeMenu" href="javascript:void(0)">-</a>
-            <a href="index.html">&#8226; Acceuil</a>
+            <a href="index.html">&#8226; Accueil</a>
             <a href="singles.html">&#8226; Projets</a>
             <a href="a-propos.html">&#8226; À propos</a>
             <a href="contact.html">&#8226; Contact</a>
@@ -51,7 +53,7 @@
 </header>
 
 <div class="intro-projet">
-    <div class="image-projet"><img src="images/mockup-projet-4.png" alt="projet-site-ecommerce"></div>
+    <div class="image-projet"><img alt="projet-site-ecommerce" src="images/mockup-projet-4.png"></div>
     <div class="texte-projet">
         <h1>Refonte d’un site</h1>
         <h2>WordPress <span class="texte-alt-color">|</span> HTML/CSS/JS</h2>
@@ -73,10 +75,10 @@
                 <h2>Logiciels</h2>
                 <div class="flex-logiciels">
                     <div class="titre-logo-projet">
-                        <img src="images/icone-wordpress.png" alt="icon-webstorm">
+                        <img alt="icon-webstorm" src="images/icone-wordpress.png">
                     </div>
                     <div class="titre-logo-projet">
-                        <img src="images/WooCommerce_logo.png" alt="icon-phpstorm">
+                        <img alt="icon-phpstorm" src="images/WooCommerce_logo.png">
                     </div>
                 </div>
             </div>
@@ -84,10 +86,10 @@
                 <h2>Compétences</h2>
                 <div class="flex-competences">
                     <div class="titre-logo-projet">
-                        <img src="images/icone-wordpress.png" alt="icon-html-5">
+                        <img alt="icon-html-5" src="images/icone-wordpress.png">
                     </div>
                     <div class="titre-logo-projet">
-                        <img src="images/css-icon.png" alt="icon-html-5">
+                        <img alt="icon-html-5" src="images/css-icon.png">
                     </div>
                 </div>
             </div>
@@ -95,33 +97,33 @@
     </div>
 </div>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="single-voir-site">
-    <a href="https://cmenard.dectim.ca/TechTim/"><img src="images/techtim-voirlesite.jpg" alt="lien-site-web"></a>
+<section class="single-voir-site"
+         data-aos="zoom-in-down" data-aos-duration="1000">
+    <a href="https://cmenard.dectim.ca/TechTim/"><img alt="lien-site-web" src="images/techtim-voirlesite.jpg"></a>
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Mise en place du <span class="texte-alt-color">code promo</span> avec WooCommerce</h1>
-    <img src="images/techtim-code-promo.jpg" alt="refonte-site-programmation">
+    <img alt="refonte-site-programmation" src="images/techtim-code-promo.jpg">
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Création d’un <span class="texte-alt-color">inventaire</span> de boutique WooCommerce</h1>
-    <img src="images/techtim-produits.jpg" alt="refonte-site-programmation">
+    <img alt="refonte-site-programmation" src="images/techtim-produits.jpg">
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Boutique avec <span class="texte-alt-color">catégories</span></h1>
-    <img src="images/techtim-categories.jpg" alt="refonte-site-programmation">
+    <img alt="refonte-site-programmation" src="images/techtim-categories.jpg">
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Variation pour un <span class="texte-alt-color">produit</span></h1>
-    <img src="images/techtim-variation.jpg" alt="refonte-site-programmation">
+    <img alt="refonte-site-programmation" src="images/techtim-variation.jpg">
 </section>
 
 
