--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 
     <link href="css/main.css" rel="stylesheet">
 
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
@@ -18,7 +19,8 @@
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!--aos-->
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet"/>
 
     <!-- Script -->
     <script src="js/script.js"></script>
@@ -27,15 +29,15 @@
 </head>
 <body>
 <div class="loader">
-    <img src="images/loading.gif" alt="chargement">
+    <img alt="chargement" src="images/loading.gif">
 </div>
 <div class="cursor"></div>
 <header class="header-page">
     <nav>
         <!-- nav-hamburger -->
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closeMenu">-</a>
-            <a href="index.html">&#8226; Acceuil</a>
+        <div class="sidenav" id="mySidenav">
+            <a class="closeMenu" href="javascript:void(0)">-</a>
+            <a href="index.html">&#8226; Accueil</a>
             <a href="singles.html">&#8226; Projets</a>
             <a href="a-propos.html">&#8226; À propos</a>
             <a href="contact.html">&#8226; Contact</a>
@@ -51,7 +53,7 @@
 </header>
 
 <section class="video-demo-bg">
-    <video playsinline autoplay muted loop id="bgvideo">
+    <video autoplay id="bgvideo" loop muted playsinline>
         <source src="images/demo.mp4" type="video/mp4">
     </video>
 </section>
@@ -62,7 +64,9 @@
         <h1>Cédric Ménard</h1>
         <p>Développeur <span class="texte-alt-color">&</span>
             Créateur média</p>
-        <a href="singles.html"><button type="button">Voir mes projets</button></a>
+        <a href="singles.html">
+            <button type="button">Voir mes projets</button>
+        </a>
     </div>
 </section>
 
