--- a/src/projection-mapping.html
+++ b/src/projection-mapping.html
@@ -8,6 +8,7 @@
 
     <link href="css/main.css" rel="stylesheet">
 
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
@@ -18,6 +19,7 @@
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
 
+    <!--aos-->
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet"/>
 
     <!-- Script -->
@@ -35,7 +37,7 @@
         <!-- nav-hamburger -->
         <div class="sidenav" id="mySidenav">
             <a class="closeMenu" href="javascript:void(0)">-</a>
-            <a href="index.html">&#8226; Acceuil</a>
+            <a href="index.html">&#8226; Accueil</a>
             <a href="singles.html">&#8226; Projets</a>
             <a href="a-propos.html">&#8226; À propos</a>
             <a href="contact.html">&#8226; Contact</a>
@@ -51,7 +53,7 @@
 </header>
 
 <div class="intro-projet">
-    <div class="image-projet"><img src="images/mockup-projet-5.png" alt="projet-projection-mapping-mockup"></div>
+    <div class="image-projet"><img alt="projet-projection-mapping-mockup" src="images/mockup-projet-5.png"></div>
     <div class="texte-projet">
         <h1>Projection mapping</h1>
         <h2>Blender <span class="texte-alt-color">|</span> fSpy</h2>
@@ -68,7 +70,7 @@
                 <div class="flex-logiciels">
                     <div class="titre-logo-projet">
                         <p>Blender</p>
-                        <img src="images/blender-icon.png" alt="icon-blender">
+                        <img alt="icon-blender" src="images/blender-icon.png">
                     </div>
                 </div>
             </div>
@@ -76,7 +78,7 @@
                 <h2>Compétences</h2>
                 <div class="flex-competences">
                     <div class="titre-logo-projet">
-                        <img src="images/3D.png" alt="icone-3d">
+                        <img alt="icone-3d" src="images/3D.png">
                     </div>
                 </div>
             </div>
@@ -84,30 +86,30 @@
     </div>
 </div>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="citrouille-demo-video">
+<section class="citrouille-demo-video"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Video</h1>
     <video controls id="citrouille-video">
         <source src="images/citrouille-video.mp4" type="video/mp4">
     </video>
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>L’image originale</h1>
-    <img src="images/projection-photo.jpg" alt="photo-ruelle">
+    <img alt="photo-ruelle" src="images/projection-photo.jpg">
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Le décor</h1>
-    <img src="images/projection-decor.jpg" alt="decor-3d-dans-blender">
+    <img alt="decor-3d-dans-blender" src="images/projection-decor.jpg">
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>La scène</h1>
-    <img src="images/projection-scene.jpg" alt="scene-3d-dans-blender">
+    <img alt="scene-3d-dans-blender" src="images/projection-scene.jpg">
 </section>
 
 
