--- a/src/verum.html
+++ b/src/verum.html
@@ -8,6 +8,7 @@
 
     <link href="css/main.css" rel="stylesheet">
 
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
@@ -18,6 +19,7 @@
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
 
+    <!--aos-->
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet"/>
 
     <!-- Script -->
@@ -35,7 +37,7 @@
         <!-- nav-hamburger -->
         <div class="sidenav" id="mySidenav">
             <a class="closeMenu" href="javascript:void(0)">-</a>
-            <a href="index.html">&#8226; Acceuil</a>
+            <a href="index.html">&#8226; Accueil</a>
             <a href="singles.html">&#8226; Projets</a>
             <a href="a-propos.html">&#8226; À propos</a>
             <a href="contact.html">&#8226; Contact</a>
@@ -51,7 +53,7 @@
 </header>
 
 <div class="intro-projet">
-    <div class="image-projet"><img src="images/mockup-projet-3.png" alt="projet-jeux-de-course"></div>
+    <div class="image-projet"><img alt="projet-jeux-de-course" src="images/mockup-projet-3.png"></div>
     <div class="texte-projet">
         <h1>Verum</h1>
         <h2>Figma <span class="texte-alt-color">|</span> Expérience Intéractive</h2>
@@ -69,7 +71,7 @@
                 <h2>Logiciels</h2>
                 <div class="flex-logiciels">
                     <div class="titre-logo-projet">
-                        <img src="images/figma-icon.png" alt="icon-webstorm">
+                        <img alt="icon-webstorm" src="images/figma-icon.png">
                     </div>
                 </div>
             </div>
@@ -77,7 +79,7 @@
                 <h2>Compétences</h2>
                 <div class="flex-competences">
                     <div class="titre-logo-projet">
-                        <img src="images/figma-icon.png" alt="icon-html-5">
+                        <img alt="icon-html-5" src="images/figma-icon.png">
                     </div>
                 </div>
             </div>
@@ -85,34 +87,34 @@
     </div>
 </div>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="figma-verum">
-    <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FBVnoaDnzV8xjXX67hZokVQ%2FTP3-Gabarit-de-d%C3%A9part-Copy-Copy%3Fnode-id%3D671%253A102600%26scaling%3Dscale-down-width%26page-id%3D2%253A4%26starting-point-node-id%3D673%253A15643"
-            allowfullscreen></iframe>
+<section class="figma-verum"
+         data-aos="zoom-in-down" data-aos-duration="1000">
+    <iframe allowfullscreen
+            src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FBVnoaDnzV8xjXX67hZokVQ%2FTP3-Gabarit-de-d%C3%A9part-Copy-Copy%3Fnode-id%3D671%253A102600%26scaling%3Dscale-down-width%26page-id%3D2%253A4%26starting-point-node-id%3D673%253A15643"></iframe>
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Esquisse Prototype</h1>
-    <img src="images/verum-acceuil.jpg" alt="prototype-sketch">
+    <img alt="prototype-sketch" src="images/verum-acceuil.jpg">
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Premier Prototype</h1>
-    <img src="images/verum-prototypage-low-fi.jpg" alt="prototype-lo-fi">
+    <img alt="prototype-lo-fi" src="images/verum-prototypage-low-fi.jpg">
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Prototype Avancé</h1>
-    <img src="images/verum-prototypage-high-fi.jpg" alt="prototype-hi-fi">
+    <img alt="prototype-hi-fi" src="images/verum-prototypage-high-fi.jpg">
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Prototype Final</h1>
-    <img src="images/verum-prototypage-final.jpg" alt="prototype-final">
+    <img alt="prototype-final" src="images/verum-prototypage-final.jpg">
 </section>
 
 
