responsive fix single et index + responsive tablet 3/4

--- a/src/site-ecommerce.html
+++ b/src/site-ecommerce.html
@@ -86,7 +86,7 @@
                 <h2>Compétences</h2>
                 <div class="flex-competences">
                     <div class="titre-logo-projet">
-                        <img alt="icon-html-5" src="images/icone-wordpress.png">
+                        <img alt="icon-wordpress" src="images/icone-wordpress.png">
                     </div>
                     <div class="titre-logo-projet">
                         <img alt="icon-html-5" src="images/css-icon.png">
@@ -99,7 +99,7 @@
 
 <section class="single-voir-site"
          data-aos="zoom-in-down" data-aos-duration="1000">
-    <a href="https://cmenard.dectim.ca/TechTim/"><img alt="lien-site-web" src="images/techtim-voirlesite.jpg"></a>
+    <a href="https://cmenard.dectim.ca/TechTim/"><div class="image-ecommerce"><h1>Voir le Site</h1></div></a>
 </section>
 
 <section class="projet-section"
