h1 single aligne texte centre et aos fix gauche-droite anim

--- a/src/a-propos.html
+++ b/src/a-propos.html
@@ -110,7 +110,7 @@
                 code de qualité.</p>
         </div>
         <div class="comp-2"
-             data-aos="zoom-in-right" data-aos-offset="400">
+             data-aos="zoom-in-left" data-aos-offset="400">
             <p>J’aime travailler avec <span class="texte-alt2-color">Figma</span> pour le <span
                     class="texte-alt2-color">prototypage</span> et <span class="texte-alt2-color">Photoshop</span> pour
                 optimiser les images que je
@@ -130,7 +130,7 @@
                 <span class="texte-alt2-color">CPT</span></p>
         </div>
         <div class="comp-4"
-             data-aos="zoom-in-right" data-aos-offset="400">
+             data-aos="zoom-in-left" data-aos-offset="400">
             <p>Pour créer des <span class="texte-alt2-color">expériences</span> interactives intéressantes, je me sers
                 de <span
                         class="texte-alt2-color">Unity</span>, <span class="texte-alt2-color">Blender</span> et <span
