fix index overflow

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 
     </nav>
 </header>
-
+<div class="index-body">
 <section class="video-demo-bg">
     <video autoplay id="bgvideo" loop muted playsinline>
         <source src="images/demo.mp4" type="video/mp4">
@@ -69,6 +69,6 @@
         </a>
     </div>
 </section>
-
+</div>
 </body>
 </html>
