ajout sketchfab et alignement logo single

--- a/src/contact.html
+++ b/src/contact.html
@@ -67,7 +67,8 @@
                         class="fab fa-linkedin"></i></a>
                 <a href="https://www.youtube.com/channel/UC4ELHn9lArnMBaZl6ErUjHg/" target="_blank"><i
                         class="fab fa-youtube-square"></i></a>
-                <a href="https://github.com/CedricMen" target="_blank"><i class="fab fa-github-square"></i></a>
+                <a href="https://github.com/CedricMen" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://sketchfab.com/cedricmenard" target="_blank"><div class="ico-sketchfab"></div></a>
             </div>
         </div>
         <div class="formulaire-contact">
