Mail to + index + 4 sec carrousel + Lien site eCommerce externe + add sketchfab

--- a/src/a-propos.html
+++ b/src/a-propos.html
@@ -132,9 +132,8 @@
         <div class="comp-4"
              data-aos="zoom-in-left" data-aos-offset="400">
             <p>Pour créer des <span class="texte-alt2-color">expériences</span> interactives intéressantes, je me sers
-                de <span
-                        class="texte-alt2-color">Unity</span>, <span class="texte-alt2-color">Blender</span> et <span
-                        class="texte-alt2-color">Touch Designer</span></p>
+                de <span class="texte-alt2-color">Unity</span>, <span class="texte-alt2-color">Blender</span> et <span
+                        class="texte-alt2-color">TouchDesigner</span></p>
             <a href="">
                 <div class="img-comp-4"></div>
             </a>
