--- a/src/site-ecommerce.html
+++ b/src/site-ecommerce.html
@@ -99,7 +99,7 @@
 
 <section class="single-voir-site"
          data-aos="zoom-in-down" data-aos-duration="1000">
-    <a href="https://cmenard.dectim.ca/TechTim/"><div class="image-ecommerce"><h1>Voir le Site</h1></div></a>
+    <a href="https://cmenard.dectim.ca/TechTim/" target="_blank"><div class="image-ecommerce"><h1>Voir le Site</h1></div></a>
 </section>
 
 <section class="projet-section"
