--- a/src/projection-mapping.html
+++ b/src/projection-mapping.html
@@ -57,11 +57,11 @@
     <div class="texte-projet">
         <h1>Projection mapping</h1>
         <h2>Blender <span class="texte-alt-color">|</span> fSpy</h2>
-        <p>Un court film de 15 secondes utilisant une technique pour projeter une image 2D sur des éléments modélisés
-            par moi-même en 3D. Ce projet a été réalisé dans le cadre de mon cours ‘Production Numérique'. Pour ce
-            projet j’ai entièrement utilisé Blender pour la modélisation et l’animation et pour la projection j’ai
-            utilisé l'add-on fspy qui fonctionne en relation avec Blender pour appliquer la texture avec la caméra à
-            l’environnement grace à des points de fuites.</p>
+        <p>Un court film de 15 secondes utilisant une technique pour projeter une <span class="texte-alt-color">image 2D</span> sur des éléments modélisés
+            par moi-même en <span class="texte-alt-color">3D</span>. Ce projet a été réalisé dans le cadre de mon cours ‘Production Numérique'. Pour ce
+            projet j’ai entièrement utilisé <span class="texte-alt-color">Blender</span> pour la <span class="texte-alt-color">modélisation</span> et l’<span class="texte-alt-color">animation</span> et pour la <span class="texte-alt-color">projection</span> j’ai
+            utilisé l'add-on <span class="texte-alt-color">fspy</span> qui fonctionne en relation avec Blender pour appliquer la <span class="texte-alt-color">texture</span> avec la caméra à
+            l’environnement grace à des <span class="texte-alt-color">points de fuites</span>.</p>
         <p>Crédit : <span class="texte-alt-color">Cédric Ménard</span></p>
 
         <div class="logiciels-competences-projet">
@@ -108,7 +108,7 @@
 <section class="projet-section"
          data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>La scène</h1>
-    <img alt="scene-3d-dans-blender" src="images/projection-scene.jpg">
+    <img alt="scene-3d-dans-blender" src="images/projection-scene.png">
 </section>
 
 
