--- a/src/singles.html
+++ b/src/singles.html
@@ -121,8 +121,7 @@
                 <button type="button">Voir le projet</button>
             </a>
         </div>
-        <a href="projection-mapping.html"><img alt="film-citrouille" class="citrouille"
-                                               src="images/mockup-projet-5.png"></a>
+        <a href="projection-mapping.html"><img alt="film-citrouille" class="citrouille" src="images/mockup-projet-5.png"></a>
     </div>
 </section>
 
