--- a/src/contact.html
+++ b/src/contact.html
@@ -57,7 +57,7 @@
 <section class="contact">
     <div class="grid-contact">
         <div class="info-contact">
-            <h2>Contact: <br> <span class="texte-alt-color">web@cedricmenard.ca</span></h2>
+            <h2>Contact: <br> <span class="texte-alt-color"><a href="mailto:web@cedricmenard.ca">web@cedricmenard.ca</a></span></h2>
             <h2>Téléphone: <br> <span class="texte-alt-color">438-399-8349</span></h2>
             <div class="cv-btn"><a download href="images/Cedric_Menard-CV.pdf">
                 <button type="button">Voir mon CV</button>
