Responsive 375 fin et ajustements divers dans single et a-propos et banderole

--- a/src/course-lumiere.html
+++ b/src/course-lumiere.html
@@ -94,7 +94,7 @@
 
 <section class="single-demo-video"
          data-aos="zoom-in-down" data-aos-duration="1000">
-    <h1>Video Demo</h1>
+    <h1>Vidéo Démo</h1>
     <iframe src="https://www.youtube.com/embed/5W9M3tTiSGw?controls=1"></iframe>
 </section>
 
