--- a/src/refonte-site.html
+++ b/src/refonte-site.html
@@ -105,7 +105,7 @@
 
 <section class="single-demo-video"
          data-aos="zoom-in-down" data-aos-duration="1000">
-    <h1>Video Demo</h1>
+    <h1>Vidéo Démo</h1>
     <iframe src="https://www.youtube.com/embed/kWp3R5SsEJE?controls=0"></iframe>
 </section>
 
