--- a/src/site-ecommerce.html
+++ b/src/site-ecommerce.html
@@ -53,10 +53,10 @@
 </header>
 
 <div class="intro-projet">
-    <div class="image-projet"><img alt="projet-site-ecommerce" src="images/mockup-projet-5.png"></div>
+    <div class="image-projet"><img alt="projet-site-ecommerce" src="images/mockup-projet-4.png"></div>
     <div class="texte-projet">
-        <h1>Refonte d’un site</h1>
-        <h2>WordPress <span class="texte-alt-color">|</span> HTML/CSS/JS</h2>
+        <h1>Site eCommerce</h1>
+        <h2>WordPress <span class="texte-alt-color">|</span> WooCommerce</h2>
         <p>Un site <span class="texte-alt-color">eCommerce</span> utilisant une plateforme de paiement <span
                 class="texte-alt-color">Stripe</span> et <span class="texte-alt-color">Paypal</span>. Ce travail était
             principalement du
