--- a/src/projection-mapping.html
+++ b/src/projection-mapping.html
@@ -87,7 +87,7 @@
 
 <section class="citrouille-demo-video"
          data-aos="zoom-in-down" data-aos-duration="1000">
-    <h1>Video</h1>
+    <h1>Vidéo</h1>
     <video controls id="citrouille-video">
         <source src="images/citrouille-video.mp4" type="video/mp4">
     </video>
