ajout fix erreur 404

--- a/src/404.html
+++ b/src/404.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>404</title>
+    <title>À propos</title>
 
     <link href="css/main.css" rel="stylesheet">
+
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,6 +19,7 @@
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
 
+    <!--aos-->
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet"/>
 
     <!-- Script -->
@@ -52,7 +54,12 @@
 
 
 <div class="s-404">
-    <h1>Erreur 404 désolé cette page n'existe pas :(</h1></div>
+    <h1>Erreur 404</h1>
+    <h2>désolé cette page n'existe pas :(</h2>
+    <a href="index.html">
+        <button type="button">Retour à l'Accueil</button>
+    </a>
+</div>
 
 
 <footer>
