ajout d'icone site

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-    <title>Acceuil</title>
+    <link rel="icon" href="images/icon-site.png" type="image/x-icon">
+    <title>Accueil</title>
 
     <link href="css/main.css" rel="stylesheet">
 
