--- a/src/a-propos.html
+++ b/src/a-propos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+    <link rel="icon" href="images/icon-site.png" type="image/x-icon">
     <title>À propos</title>
 
     <link href="css/main.css" rel="stylesheet">
