Ajout projet discoChefTV

--- a/src/singles.html
+++ b/src/singles.html
@@ -123,6 +123,21 @@
         </div>
         <a href="projection-mapping.html"><img alt="film-citrouille" class="citrouille" src="images/mockup-projet-5.png"></a>
     </div>
+
+    <div class="projet-f"
+         data-aos="fade-left"
+         data-aos-easing="ease-in-sine" data-aos-offset="400">
+        <div class="bulle">
+            <p>3D | Jeux Vidéo</p>
+            <h2>Disco Chef TV</h2>
+            <p>Projet Scolaire</p>
+            <a href="disco-chef-tv.html">
+                <button type="button">Voir le projet</button>
+            </a>
+        </div>
+        <a href="disco-chef-tv.html"><img alt="projet-jeux-discochef" src="images/mockup-projet-6.png"></a>
+    </div>
+
 </section>
 
 <footer>
