correction titre discoChefTV et fix voir site ecommerce

--- a/src/disco-chef-tv.html
+++ b/src/disco-chef-tv.html
@@ -61,7 +61,7 @@
             l'échelle d'une classe. Divisé en département, nous avons réalisé un jeu vidéo culinaire <span class="texte-alt-color">low poly</span> à la manière d'un
             vrai studio de Jeu. J'ai rejoint le département de 3D pour ce projet. J'ai réalisé la majorité des repas
             et ingrédients du Jeu. J'ai modélisé tout mes modèles dans <span class="texte-alt-color">Blender</span>, texturiser dans <span class="texte-alt-color">Substance 3D Painter</span> et
-            <span class="texte-alt-color">intégré</span> moi-même dans <span class="texte-alt-color">Unity</span></p>
+            <span class="texte-alt-color">intégré</span> dans <span class="texte-alt-color">Unity</span>.</p>
         <p>Crédit :</p>
         <p><span class="texte-alt-color">Déléguée de projet</span> : Émilie Pinsonneault-Lysight</p>
         <p><span class="texte-alt-color">Réalisateur vidéo</span> : Frédéric Brisson</p>
@@ -149,7 +149,7 @@
 
 <section class="projet-section"
          data-aos="zoom-in-down" data-aos-duration="1000">
-    <h1>texturisation dans Substance</h1>
+    <h1>Texturisation dans Substance</h1>
     <img alt="photo-ruelle" src="images/texture-substance.jpg">
 </section>
 
