modification courriel mailto

--- a/src/contact.html
+++ b/src/contact.html
@@ -83,7 +83,7 @@
 
             <!--            <input type="submit" name="nom" value=" Envoyer ">-->
             <!--            </form>-->
-            <a href="mailto:web@cedricmenard.ca.com"><img alt="logo-courriel" src="images/courriel-logo.png"></a>
+            <a href="mailto:web@cedricmenard.ca"><img alt="logo-courriel" src="images/courriel-logo.png"></a>
         </div>
     </div>
 </section>
